[package]
name = "seatrac_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.9.4"
hex = "0.4.3"
serialport = "4.0"
num_enum = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
binrw = "0.15.0"
thread = "0.0.1"
rclrs = "0.5.1"
std_msgs = "*"